# scenenetrgb-d

./: .gitignore
camera_trajectory_generator/: CMakeLists.txt  camera_trajectory_generator.cpp
camera_trajectory_generator/CMakeModules/: FindCVD.cmake
camera_trajectory_generator/assimpobjloader/: assimp_obj_loader.h
camera_trajectory_generator/trajectoryGenerator/: CollisionInterface.hpp  OrbitGenerator.cpp  OrbitGenerator.hpp  TrajectoryGenerator.cpp  TrajectoryGenerator.hpp  interfaces.hpp
renderer/: CMakeLists.txt
renderer/CMakeModules/: FindCVD.cmake  FindTBB.cmake
renderer/src/: scenenet_config.h  scenenet_render.cpp
renderer/src/Material/: Diffuse.cpp
renderer/src/Renderer/: OptixRenderer.cpp  OptixRenderer_CPUKdTree.cpp
renderer/src/Scene/: SceneNet.cpp  SceneNet.h
renderer/src/Util/sutil/: CMakeLists.txt
renderer/src/cereal/: CMakeLists.txt  package.xml
renderer/src/cereal/sandbox/: sandbox.cpp
scene_generator/: CMakeLists.txt  cmdparser.hpp  scenenet_room_generator.cpp
scene_generator/textfiles/: ShapeNetsSUNRGBDMapping.txt  objects_in_scene.txt  train_layouts.txt
